--- a/loan_prediction/inference.ipynb
+++ b/loan_prediction/inference.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "9bfbd578",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from loan_prediction import preprocessing as p\n",
@@ -15,7 +19,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "58733bdc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def make_prediction(test):\n",
@@ -30,7 +38,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83cf1df9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
