--- a/loan_prediction/preprocessing.ipynb
+++ b/loan_prediction/preprocessing.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "8be2b059",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -21,7 +25,11 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "efa62429",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def model_preprocessing_train(feature):\n",
@@ -43,7 +51,11 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "037e9e91",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def add_model(feature, target):\n",
@@ -56,7 +68,11 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "efbdc745",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def scale(features):\n",
@@ -69,7 +85,11 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "58daeb6f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def add_scaler(feature):\n",
@@ -82,7 +102,11 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "751a538c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def feature_selection(feature):\n",
@@ -94,7 +118,11 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "5e582255",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def concate_num_cat(categorical_feature, numerical_feature):\n",
@@ -107,7 +135,11 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "14c4ed22",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def encode(categorical_feature):\n",
@@ -121,7 +153,11 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "e11507df",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def add_encoder(categorical_feature):\n",
@@ -134,7 +170,11 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "38943730",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_numerical_features(feature):\n",
@@ -146,7 +186,11 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "4af70a26",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def get_categorical_features(feature):\n",
@@ -158,7 +202,11 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "d780308b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def fill_missing(features):\n",
@@ -176,7 +224,11 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "187bdc6a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def split_data(features, target):\n",
@@ -188,7 +240,11 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "e1552a18",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def model_preprocessing(feature):\n",
@@ -208,7 +264,11 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "2b229fcf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def compute_accuracy(target_test, target_prediction):\n",
@@ -219,7 +279,11 @@
    "cell_type": "code",
    "execution_count": 50,
    "id": "bc08cacc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def model_evaluation(feature_test, target_test):\n",
@@ -236,7 +300,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c3b9d1de",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
