--- a/loan_prediction/train.ipynb
+++ b/loan_prediction/train.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "d2a8664e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,7 +19,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "880afb24",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_model(features):\n",
